--- a/iowa.html
+++ b/iowa.html
@@ -103,7 +103,7 @@
 			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:73.4256%;left:3.8519%;width:49.375%">
-			<p class="g-pstyle4">Around 6 a.m. near the newspaper drop site, multiple witnesses report seeing a strange man in a blue car stopping to ask for directions.</p>
+			<p class="g-pstyle4">Cerca das 6:00, perto do local de entrega dos jornais, testemunhas afirmam ter visto um homem estranho num carro azul a pedir informações.</p>
 		</div>
 		<div id="g-ai0-15" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:93.5696%;margin-top:-6.4px;left:2.4724%;width:59px">
 			<p class="g-pstyle8">600 pés</p>
@@ -156,7 +156,7 @@
 			<p class="g-pstyle7">Gosch </p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:74.0512%;left:3.1157%;width:45.6%">
-			<p class="g-pstyle4">Por volta das 6:00, perto do local de entrega dos jornais, várias testemunhas afirmam ter visto um homem estranho num carro azul a parar para pedir informações.</p>
+			<p class="g-pstyle4">Cerca das 6:00, perto do local de entrega dos jornais, testemunhas afirmam ter visto um homem estranho num carro azul a pedir informações.</p>
 		</div>
 		<div id="g-ai1-14" class="g-text-shadow g-aiAbs" style="top:74.0512%;left:54.4252%;width:37.3333%">
 			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
@@ -217,7 +217,7 @@
 			<p class="g-pstyle7">2</p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:79.084%;left:26.5429%;width:28.8462%">
-			<p class="g-pstyle6">Por volta das 6:00, perto do local de entrega dos jornais, várias testemunhas afirmam ter visto um homem estranho num carro azul a parar para pedir informações.</p>
+			<p class="g-pstyle6">Cerca das 6:00, perto do local de entrega dos jornais, testemunhas afirmam ter visto um homem estranho num carro azul a pedir informações.</p>
 		</div>
 		<div id="g-ai2-16" class="g-text-shadow g-aiAbs" style="top:79.2684%;left:59.236%;width:30.7692%">
 			<p class="g-pstyle6">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
