--- a/iowa.html
+++ b/iowa.html
@@ -100,7 +100,7 @@
 			<p class="g-pstyle6">2</p>
 		</div>
 		<div id="g-ai0-13" class="g-text-shadow g-aiAbs" style="top:73.0361%;left:57.9157%;width:39.375%">
-			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
+			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny.</p>
 		</div>
 		<div id="Near_the_newspaper_drop_site_multiple" class="g-text-shadow g-aiAbs" style="top:73.4256%;left:3.8519%;width:49.375%">
 			<p class="g-pstyle4">Cerca das 6:00, perto do local de entrega dos jornais, testemunhas afirmam ter visto um homem estranho num carro azul a pedir informações.</p>
@@ -159,7 +159,7 @@
 			<p class="g-pstyle4">Cerca das 6:00, perto do local de entrega dos jornais, testemunhas afirmam ter visto um homem estranho num carro azul a pedir informações.</p>
 		</div>
 		<div id="g-ai1-14" class="g-text-shadow g-aiAbs" style="top:74.0512%;left:54.4252%;width:37.3333%">
-			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
+			<p class="g-pstyle4">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny.</p>
 		</div>
 		<div id="g-ai1-15" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:93.3762%;margin-top:-6.4px;left:3.4453%;width:59px">
 			<p class="g-pstyle8">600 pés</p>
@@ -220,7 +220,7 @@
 			<p class="g-pstyle6">Cerca das 6:00, perto do local de entrega dos jornais, testemunhas afirmam ter visto um homem estranho num carro azul a pedir informações.</p>
 		</div>
 		<div id="g-ai2-16" class="g-text-shadow g-aiAbs" style="top:79.2684%;left:59.236%;width:30.7692%">
-			<p class="g-pstyle6">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny</p>
+			<p class="g-pstyle6">Pouco depois das 7:45, o pai de Johnny encontra a carrinha do filho cheia de jornais não entregues. Ninguém sabe onde está Johnny.</p>
 		</div>
 		<div id="g-ai2-17" class="g-Layer_9 g-aiAbs g-aiPointText" style="top:92.4893%;margin-top:-7.7px;left:2.0199%;width:63px">
 			<p class="g-pstyle9">600 pés</p>
