--- a/rendas2025.html
+++ b/rendas2025.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cálculo de Aumento de Renda</title>
+    <title>Cálculo de Aumento de Renda - SIMULADOR CNN PORTUGAL</title>
 </head>
 <body>
-    <div style="font-family: helvetica; font-size:10px;text-transform:uppercase">Cálculo de Aumento de Renda</div>
+    <div style="font-family: helvetica; font-size:10px;text-transform:uppercase">Cálculo de Aumento de Renda - Simulador CNN Portugal</div>
     <hr/></br></br>
     <div style="font-family: georgia; font-size:16px;text-transform:uppercase"><label for="rendaAtual">Valor da sua renda atual</label></div>
     <input type="number" id="rendaAtual" oninput="calcularRenda()" placeholder="Insira aqui o valor">
