--- a/oe2025.html
+++ b/oe2025.html
@@ -33,7 +33,7 @@
         let pdfText = '';
 
         // Load the PDF from the provided Google Drive URL
-        const pdfUrl = "https://drive.google.com/uc?id=1QJsYw31drHNX-t_1y_DB7Hpq3CNGBBC7";
+        const pdfUrl = "https://gogapo.github.io/cnn/relatorio_OE.pdf";
         const loadingTask = pdfjsLib.getDocument(pdfUrl);
 
         loadingTask.promise.then(function(pdf) {
