--- a/2025OE.html
+++ b/2025OE.html
@@ -29,7 +29,7 @@
     <h4>OE 20025 | MOTOR DE BUSCA CNN PORTUGAL</h4>
     <input type="text" id="wordInput" placeholder="pesquise aqui" />
     <button id="searchButton">Search</button>
-    <div id="loading">PDF a carregar. Aguarde um pouco antes de começar a pesquisar</div>
+    <div id="loading">PDF a carregar. Começe a pesquisar depois de esta mensagem desaparecer</div>
     <div id="output"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
