--- a/2025OE.html
+++ b/2025OE.html
@@ -29,7 +29,7 @@
     <h4>OE 2025 | MOTOR DE BUSCA CNN PORTUGAL</h4>
     <input type="text" id="wordInput" placeholder="escreva aqui" />
     <button id="searchButton">pesquisar</button>
-    <div id="loading">PDF a carregar. Comece a pesquisar só depois de esta mensagem desaparecer</div>
+    <div id="loading">PDF a carregar. <b></b>Comece a pesquisar só depois de esta mensagem desaparecer</b></div>
     <div id="output"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
