--- a/2025OE.html
+++ b/2025OE.html
@@ -20,21 +20,18 @@
             color: gray;
         }
         #loading {
-            color: blue;
-            margin-top: 20px;
-        }
-         #loading2 {
             color: red;
             margin-top: 20px;
         }
+         
     </style>
 </head>
 <body>
     <h4>OE 2025 | MOTOR DE BUSCA CNN PORTUGAL</h4>
     <h7>pode ver <a href="https://gogapo.github.io/cnn/relatorio_OE.pdf" target="_blank">AQUI</a> o documento na íntegra</h7>
-    <input type="text" id="wordInput" placeholder="pesquise aqui" />
-    <button id="searchButton">Search</button>
-    <div id="loading2">PDF a carregar, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
+    <input type="text" id="wordInput" placeholder="escreva aqui" />
+    <button id="searchButton">pesquisar</button>
+    <div id="loading">PDF a carregar, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
     <div id="output"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
