--- a/2025OE.html
+++ b/2025OE.html
@@ -27,8 +27,9 @@
     </style>
 </head>
 <body>
-    <h4>OE 2025 | MOTOR DE BUSCA CNN PORTUGAL</h4>
-    <h7>pode ver <a href="https://gogapo.github.io/cnn/relatorio_OE.pdf" target="_blank">AQUI</a> o documento na íntegra</h7>
+    <div style="font-size:15px">OE 2025 | MOTOR DE BUSCA CNN PORTUGAL</div>
+    <div style="font-size:8px">pode ver <a href="https://gogapo.github.io/cnn/relatorio_OE.pdf" target="_blank">AQUI</a> o documento na íntegra</div>
+    </br></br>
     <input type="text" id="wordInput" placeholder="escreva aqui" />
     <button id="searchButton">pesquisar</button>
     <div id="loading">PDF a carregar, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
