--- a/2025OE.html
+++ b/2025OE.html
@@ -31,7 +31,7 @@
     </br></br>
     <input type="text" id="wordInput" placeholder="escreva aqui" />
     <button id="searchButton">pesquisar</button>
-    <div id="loading">PDF a carregar, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
+    <div id="loading">A carregar a informação, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
     <div id="output"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
