--- a/OE2025_2.html
+++ b/OE2025_2.html
@@ -173,7 +173,7 @@
 
         <input type="text" id="wordInput" placeholder="escreva aqui" />
         <button id="searchButton">pesquisar</button>
-        <div id="loading">A carregar a informação, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
+        <div id="loading">!!!! A carregar a informação, aguarde um pouco. Comece a pesquisar só depois de esta mensagem desaparecer</div>
         <div id="output"></div>
         <div id="pagination"></div>
     </div>
