--- a/OE2025_2.html
+++ b/OE2025_2.html
@@ -21,7 +21,7 @@
             color: gray;
         }
         #loading {
-            color: red;
+            color: blue;
             margin-top: 20px;
             font-weight: bold; /* Negrito */
             margin-bottom: 20px; /* Espaço adicional */
