--- a/orcamento25.html
+++ b/orcamento25.html
@@ -78,6 +78,11 @@
         .pagination button:hover {
             background-color: #ec971f; /* Laranja mais escuro no hover */
         }
+        .pagination .active {
+            background-color: #007bff; /* Cor azul para a página ativa */
+            color: white; /* Texto branco para a página ativa */
+            font-weight: bold; /* Texto em negrito para a página ativa */
+        }
     </style>
 </head>
 <body>
@@ -203,11 +208,13 @@
             if (currentPage > 1) {
                 pagination.innerHTML += `<button onclick="changePage(${currentPage - 1})">Anterior</button>`;
             }
-
             for (let i = 1; i <= totalPages; i++) {
-                pagination.innerHTML += `<button onclick="changePage(${i})">${i}</button>`;
+                if (i === currentPage) {
+                    pagination.innerHTML += `<button class="active">${i}</button>`; // Highlight active page
+                } else {
+                    pagination.innerHTML += `<button onclick="changePage(${i})">${i}</button>`;
+                }
             }
-
             if (currentPage < totalPages) {
                 pagination.innerHTML += `<button onclick="changePage(${currentPage + 1})">Próximo</button>`;
             }
