--- a/orcamento25.html
+++ b/orcamento25.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #f9f9f9; /* Fundo mais suave */
+            background-color: white; /* Fundo branco da página */
             color: #333; /* Cor do texto mais escura */
         }
         #header {
@@ -50,7 +50,7 @@
             margin-top: 20px;
         }
         .result {
-            background-color: white; /* Fundo branco para resultados */
+            background-color: #f0f0f0; /* Fundo cinza para resultados */
             border: 1px solid #ddd; /* Borda leve */
             border-radius: 5px; /* Bordas arredondadas */
             padding: 10px;
