--- a/orcamento25.html
+++ b/orcamento25.html
@@ -42,7 +42,7 @@
             background-color: #0056b3; /* Azul mais escuro no hover */
         }
         #loading {
-            color: #2E8BC0;
+            color: #9e1b32;
             margin-top: 20px;
             font-weight: bold;
         }
