--- a/orcamento25.html
+++ b/orcamento25.html
@@ -50,7 +50,7 @@
             margin-top: 20px;
         }
         .result {
-            background-color: #f3f3f3; /* Fundo cinza para resultados */
+            background-color: #E5E4E2; /* Fundo cinza para resultados */
             border: 1px solid #ddd; /* Borda leve */
             border-radius: 5px; /* Bordas arredondadas */
             padding: 10px;
